# ibc-cosmwasm-interaction

./: .gitignore  Cargo.toml  README.md
artifacts/: checksums.txt  checksums_intermediate.txt  controller.wasm  host.wasm
contracts/controller/: Cargo.toml
contracts/controller/src/: contract.rs  ibc.rs  msg.rs  state.rs
contracts/host/: Cargo.toml
contracts/host/src/: ack.rs  contract.rs  error.rs  ibc.rs  lib.rs  msg.rs  state.rs
